--- a/Npoi.Mapper/src/Npoi.Mapper/Npoi.Mapper.csproj
+++ b/Npoi.Mapper/src/Npoi.Mapper/Npoi.Mapper.csproj
@@ -4,18 +4,20 @@
     <Description>Convention-based mapper between strong typed object and Excel data via NPOI.</Description>
     <VersionPrefix>3.1.1</VersionPrefix>
     <Authors>Donny Tian</Authors>
-    <TargetFrameworks>net40;net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net45;net46;net47;netstandard2.0</TargetFrameworks>
     <AssemblyName>Npoi.Mapper</AssemblyName>
     <PackageId>Npoi.Mapper</PackageId>
     <PackageTags>Excel;XLS;XLSX;NPOI;Object mapping;dynamic</PackageTags>
     <PackageProjectUrl>http://donnytian.github.io/Npoi.Mapper/</PackageProjectUrl>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Version>3.5.1</Version>
-    <PackageReleaseNotes>support .NET 4.0, .NET 4.5 and .net standard 2.0</PackageReleaseNotes>
+    <PackageReleaseNotes>support .NET 4.5 and .net standard 2.0</PackageReleaseNotes>
+    <AssemblyVersion>3.5.1.0</AssemblyVersion>
+    <FileVersion>3.5.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NPOI" Version="2.5.1" />
+    <PackageReference Include="NPOI" Version="2.5.3" />
   </ItemGroup>
   
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
@@ -28,8 +30,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net47' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
